--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "node ace build --production",
     "start": "node server.js",
     "lint": "eslint . --ext=.ts",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "build:all": "node ace build && nuxt build --config-file ./config/nuxt.ts"
   },
   "devDependencies": {
     "@adonisjs/assembler": "^5.0.0",
@@ -26,10 +27,14 @@
   },
   "dependencies": {
     "@adonisjs/core": "^5.3.0",
+    "@adonisjs/lucid": "^16.0.2",
     "@adonisjs/repl": "^3.1.0",
+    "luxon": "^2.0.2",
+    "mysql": "^2.18.1",
     "nuxt": "^2.15.8",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
-    "source-map-support": "^0.5.19"
+    "source-map-support": "^0.5.19",
+    "sqlite3": "^5.0.2"
   }
 }
