feature: create ace command to build adonis and nuxt

--- a/ace-manifest.json
+++ b/ace-manifest.json
@@ -1,5 +1,17 @@
 {
   "commands": {
+    "build:all": {
+      "settings": {
+        "loadApp": false,
+        "stayAlive": true
+      },
+      "commandPath": "./commands/BuildAll",
+      "commandName": "build:all",
+      "description": "Build adonis module and nuxt module project",
+      "args": [],
+      "aliases": [],
+      "flags": []
+    },
     "dump:rcfile": {
       "settings": {},
       "commandPath": "@adonisjs/core/build/commands/DumpRc",
